--- a/app/assets/stylesheets/connect.css.scss
+++ b/app/assets/stylesheets/connect.css.scss
@@ -63,6 +63,8 @@
 		font-weight: normal;
 		font-family: $font-medium;
 		color: $dark-grey;
+		display: block;
+		padding-right: 5rem;
 	}
 }
 
